# AiAgentEdu

posco-dx-agent-dev-day2/: README.md  pyproject.toml
posco-dx-agent-dev-day2/00_basics/: 00_setup.ipynb  01_llm_basics.ipynb  02_langchain_basics.ipynb  03_langchain_memory.ipynb  04_langgraph_basics.ipynb  05_deep_agents_basics.ipynb  06_comparison.ipynb  bonus_mini_project.ipynb  installed_python_packages.md  langchain_vs_deepagent_comparison.md
posco-dx-agent-dev-day2/01_langgraph_workflows/: 01_graph_api.ipynb  02_workflows.ipynb  README.md
posco-dx-agent-dev-day2/02_tool_middleware/: 01_tools.ipynb  02_middleware.ipynb  README.md
posco-dx-agent-dev-day2/langfuse-self-host/: compose.yml  install-without-compose.sh
posco-dx-agent-dev-day3/: README.md  pyproject.toml
posco-dx-agent-dev-day3/00-mcp/: get_weather.py  math_server.py  mcp.ipynb
posco-dx-agent-dev-day3/01-rag/: 01-langgraph-agentic-rag.ipynb
posco-dx-agent-dev-day3/02-skills/: 00-backends.ipynb  01-deepagents-skills.ipynb  02-Github-Copilot-Skill-활용.md
posco-dx-agent-dev-day3/02-skills/memory/: AGENT.md
posco-dx-agent-dev-day4/: 01_agent_evaluation.ipynb  02a_prompt_versioning.ipynb  02b_retrieval_drift.ipynb  02c_tool_call_tuning.ipynb  03_agent_ops_monitoring.ipynb  README.md  bonus1_sql_agent.ipynb  bonus2_service_architecture.ipynb  pyproject.toml
posco-dx-agent-dev-day5/: 01-hybrid-agent.ipynb  AI_AGENT_WORKFLOW.md  README.md  agent.py  agent_bak.py  app.py  pyproject.toml
posco-dx-agent-dev-day5/graph/: README.md  workflow.py
posco-dx-agent-dev-day5/mcp_servers/: README.md  (+3 more)
(+17 files in other folders)
