[project]
name = "day2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "deepagents>=0.4.12",
    "dotenv>=0.9.9",
    "ipykernel>=7.2.0",
    "langchain>=1.2.13",
    "langchain-openai>=1.1.11",
    "langfuse>=4.0.1",
]
