[project]
name = "day3"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "deepagents>=0.4.12",
    "dotenv>=0.9.9",
    "fastmcp>=3.1.1",
    "ipykernel>=7.2.0",
    "langchain>=1.2.13",
    "langchain-community>=0.4.1",
    "langchain-mcp-adapters>=0.2.2",
    "langchain-openai>=1.1.12",
    "langchain-text-splitters>=1.1.1",
    "langfuse>=4.0.1",
    "langgraph>=1.1.3",
    "mcp>=1.26.0",
    "nbclient>=0.10.4",
    "nbformat>=5.10.4",
    "numpy>=2.4.3",
    "pypdf>=6.9.2",
]
